Bug 7642: SMS Conversation page is cropped

--- a/src/pages/external-access/ticket-sms/ticket-sms.scss
+++ b/src/pages/external-access/ticket-sms/ticket-sms.scss
@@ -14,6 +14,6 @@
   background-color: var(--color-primary-800);
 }
 
-.mobile_message_wrapper{
-  height: calc(100vh - 7rem);
+.message_wrapper{
+  height: calc(100vh - 9rem);
 }
